--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.12",
+    "apollo-utilities": "^1.3.2",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "react": "^16.13.1",
@@ -37,6 +40,6 @@
     ]
   },
   "devDependencies": {
-    "@apollo/react-testing": "^4.0.0"
+    "@apollo/react-testing": "^3"
   }
 }
