--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@yarnpkg/pnpify": "^2.2.1",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.12",
