--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@yarnpkg/pnpify": "^2.2.1",
-    "apollo-cache-inmemory": "^1.6.2",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.12",
-    "apollo-utilities": "^1.3.2",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "react": "^16.13.1",
@@ -38,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@apollo/react-testing": "^3"
   }
 }
